templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node
spec:
  ports:
    - port: 80
      targetPort: 3000
  # type: LoadBalancer
  type: ClusterIP
  selector:
    app: node
